dnl Process this file with autoconf to produce a configure script.
AC_INIT(JSBSim.cpp, 1.0, jsb@hal-pc.org)

dnl set the $host variable based on local machine/os
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(JSBSim, 1.0)

dnl Checks for programs.
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MEMCMP

case "${host}" in
*-*-irix*)
    if test "$CXX" = "CC"; then
        AR="CC -ar"
        ARFLAGS="-o"
        CXXFLAGS="$CXXFLAGS -LANG:libc_in_namespace_std=off"
    else
        AR="ar"
        ARFLAGS="cru"
    fi
    ;;
*)
    if test "$CXX" = "g++"; then
       CXXFLAGS="$CXXFLAGS -Wno-non-template-friend"
    fi
    AR="ar"
    ARFLAGS="cru"
    ;;
esac
AC_SUBST(AR)
AC_SUBST(ARFLAGS)

dnl check for socklen_t (in Unix98)
AC_MSG_CHECKING(for socklen_t)
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
socklen_t apa;
],[],[
AC_MSG_RESULT(yes)],[
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
int accept (int, struct sockaddr *, size_t *);
],[],[
AC_MSG_RESULT(size_t)
AC_DEFINE(socklen_t,size_t)], [
AC_MSG_RESULT(int)
AC_DEFINE(socklen_t,int)])])

AC_OUTPUT( \
Makefile \
src/Makefile \
src/initialization/Makefile \
src/models/Makefile \
src/models/atmosphere/Makefile \
src/models/propulsion/Makefile \
src/models/flight_control/Makefile \
src/input_output/Makefile \
src/math/Makefile \
src/math/direct_search/Makefile \
src/simgear/Makefile \
src/simgear/props/Makefile \
src/simgear/xml/Makefile \
aircraft/Makefile \
engine/Makefile \
scripts/Makefile \
)
